--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,10 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
+                
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "src/assets"
               }
             ],
             "styles": [
@@ -81,7 +83,9 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "src/assets"
+
               }
             ],
             "styles": [
@@ -92,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
